src/Widgets/ThumbnailGalleryWidget/ThumbnailGalleryWidget.scss
@import "~react-responsive-carousel/lib/styles/carousel.min.css";

@import "src/assets/stylesheets/variables";
@import "src/assets/stylesheets/mixins";
@import "src/assets/stylesheets/bootstrap/functions";
@import "src/assets/stylesheets/bootstrap/variables";
@import "src/assets/stylesheets/bootstrap/mixins/transition";

.gutter0 .thumbnail-gallery-widget--wrapper {
  padding: 0;
}
.thumbnail-gallery-widget {
  overflow: hidden;
  max-height: 800px;
  max-width: 800px;
  opacity: 1;
  @include transition(all 0.5s ease-in-out);
  @include transition-performance;

  &--wrapper {
    padding: 0 15px;
  }

  &--image {
    @include transition(all 0.5s ease-in-out);
    @include transition-performance;

    &:before {
      content: "";
      display: block;
      padding-top: 80%;
    }
  }

  &--content-wrapper {
    position: absolute;
    z-index: 1;
    opacity: 0;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background: rgba($primary, 0.7);
    @include transition(all 0.5s ease-in-out);

    &:hover {
      text-decoration: none;
    }
  }

  .thumbnail-gallery-widget--content {
    color: #fff;

    * {
      display: block;
      color: #fff;
      text-align: center;
    }

    .fa {
      font-size: 60px;
      padding: 10px 0;
    }

    .title {
      font-size: 22px;
      padding: 2px 0;
    }

    .subtitle {
      font-size: 14px;
      line-height: 1.3;
      position: absolute;
      bottom: 20px;
      left: 10px;
      right: 10px;
    }
  }

  &:hover {
    .thumbnail-gallery-widget {
      &--image {
        transform: scale(1.2);
      }

      &--content-wrapper {
        opacity: 1;
      }
    }
  }

  &.squeezed {
    max-height: 0;
    max-width: 0;
    opacity: 0;
  }
}

@media (max-width: $screen-sm-max) {
  .thumbnail-gallery-widget {
    .thumbnail-gallery-widget--content {
      .fa {
        font-size: 40px;
      }

      .title {
        font-size: 18px;
      }

      .subtitle {
        font-size: 12px;
        position: static;
      }
    }
  }
}

.ReactModalPortal--thumbnail-gallery-widget {
  .carousel .slide {
    background-color: transparent;
  }

  .carousel .thumbs {
    display: flex;
    justify-content: center;
  }

  .carousel .arrow {
    display: flex;
    align-self: center;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 43px;
    width: 43px;
    cursor: pointer;
  }

  .carousel .arrow.prev {
    background-image: url("../../assets/images/arrow_prev.svg");
  }

  .carousel .arrow.next {
    background-image: url("../../assets/images/arrow_next.svg");
  }

  .carousel .arrow.hidden {
    visibility: hidden;
  }

  .carousel.carousel-slider {
    display: flex;
  }

  .carousel .thumb {
    border: none;
    box-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0.2);
    border-radius: 2px;
    height: 50px;
    cursor: pointer;
  }

  .carousel .thumb div {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 100%;
  }

  .carousel .thumb.selected {
    border: none;
    box-shadow: inset 0 0 0 2px white;
    border-radius: 2px;
  }

  .image-wrapper {
    display: inline-flex;
    flex-direction: column;
    color: #fff;
  }

  .carousel .close {
    position: absolute;
    top: 0px;
    right: 0px;
    padding: 10px;
    background: #333 url("../../assets/images/close.svg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 20px;
    width: 20px;
    cursor: pointer;
  }

  .image-wrapper .details {
    display: flex;
    justify-content: space-between;
  }

  .image-wrapper .details .status {
    font-size: 0.85em;
    color: rgba(255, 255, 255, 0.75);
  }

  .image-wrapper .image {
    max-height: calc(100vh - 260px);
    max-width: 1024px;
    object-fit: cover;
    width: auto;
    margin: 0;
  }

  .carousel .slide img {
    width: unset;
  }

  .ReactModal__Overlay {
    z-index: 200000;
    background-color: rgba(0, 0, 0, 0.8) !important;
  }

  .ReactModal__Content {
    z-index: 200000;
    background-color: rgba(0, 0, 0, 0) !important;
    border: 0 !important;
    padding: 0 !important;
    overflow: hidden !important;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
}


@media (max-width: $screen-sm-max) {
  .ReactModalPortal--thumbnail-gallery-widget .image-wrapper,
  .ReactModalPortal--thumbnail-gallery-widget .image-wrapper .details { display: block;}
  .ReactModalPortal--thumbnail-gallery-widget .ReactModal__Content { 
    inset: 0 !important;  
    padding: 40px 0 !important;
  }
}

